[project]
name = "discogsography-discovery"
version = "0.1.0"
description = "Music discovery and analytics service for discogsography"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies
    "aio-pika>=9.0.0",
    "dict-hash>=1.1.0",
    "multidict>=6.5.1",
    "orjson>=3.9.0",
    "pika>=1.3.0",
    "tqdm>=4.65.0",
    # Dashboard dependencies
    "fastapi>=0.115.6",
    "httpx>=0.27.0",
    "neo4j>=5.15.0",
    "prometheus-client>=0.21.1",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.10.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.2",
    # Discovery-specific dependencies
    "networkx>=3.2.1",           # Graph algorithms
    "numpy>=1.26.0",             # Numerical computations
    "pandas>=2.1.0",             # Data analysis
    "scikit-learn>=1.3.0",       # Machine learning
    "sentence-transformers>=2.2.0",  # Semantic search
    "plotly>=5.17.0",            # Advanced visualizations
    "sqlalchemy[asyncio]>=2.0.0",  # Async SQL toolkit
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../pyproject.toml"

[tool.mypy]
extend = "../pyproject.toml"
