[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-discovery"
version = "0.1.0"
description = "Music discovery and analytics service for discogsography"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
dependencies = [
    # Core dependencies
    "aio-pika>=9.0.0",
    "dict-hash>=1.1.0",
    "fastapi>=0.115.6",
    "httpx>=0.27.0",
    "multidict>=6.5.1",
    "neo4j>=5.15.0",
    "networkx>=3.2.1",                      # Graph algorithms
    "numpy>=1.26.0",                        # Numerical computations
    "onnx>=1.14.0",                         # ONNX format
    "onnxruntime>=1.16.0",                  # ONNX inference runtime
    "optimum[onnxruntime]>=1.13.0",         # HuggingFace ONNX optimization
    "orjson>=3.9.0",
    "pandas>=2.1.0",                        # Data analysis
    "pika>=1.3.0",
    "plotly>=5.17.0",                       # Advanced visualizations
    "prometheus-client>=0.21.1",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.10.5",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=5.0.0",                # Redis caching with performance optimizations
    "scikit-learn>=1.3.0",                  # Machine learning
    "sentence-transformers[onnx]>=2.2.0",   # Semantic search with ONNX backend
    "slowapi>=0.1.9",                       # Rate limiting for FastAPI
    "sqlalchemy[asyncio]>=2.0.0",           # Async SQL toolkit
    "structlog>=24.0.0",
    "tqdm>=4.65.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.2",
]

[project.scripts]
discovery = "discovery:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Tool configurations inherit from root pyproject.toml
# Only service-specific overrides are defined here

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint.per-file-ignores]
"discovery.py" = ["T201", "ARG001"]  # Allow print statements for ASCII art, unused request args (required by slowapi)
"tests/discovery/test_*.py" = ["S105", "ARG005"]  # Test fixtures can have hardcoded passwords, unused lambda args

[tool.mypy]
extend = "../pyproject.toml"

[[tool.mypy.overrides]]
module = [
    "aio_pika.*",
    "dict_hash",
    "neo4j.*",
    "networkx.*",
    "pandas.*",
    "plotly.*",
    "scikit-learn.*",
    "sentence_transformers.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["discovery"]

[tool.pytest.ini_options]
testpaths = ["../tests/discovery"]
