[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-explore"
version = "0.1.0"
description = "Interactive graph exploration and trends visualization for Discogsography"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "orjson>=3.11.8",
    "pydantic>=2.13.0",
    "python-multipart>=0.0.26",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
explore = "explore:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
