[package]
name = "extractor"
version = "0.1.0"
edition = "2024"
authors = ["Robert Wlodarczyk <robert@simplicityguy.com>"]
license = "MIT"
description = "High-performance Rust-based Discogs data extractor"
repository = "https://github.com/SimplicityGuy/discogsography"

[[bin]]
name = "extractor"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.49", features = ["full"] }

# XML parsing (following disco-quick's approach)
quick-xml = { version = "0.39", features = ["serialize"] }

# Compression handling
flate2 = "1.1"

# Message queue (AMQP) - latest
lapin = "4.0"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client for downloads (replaces AWS S3 SDK)
reqwest = { version = "0.13", features = ["stream", "rustls"] }
bytes = "1.11"
regex = "1.12"
urlencoding = "2.1"

# Progress tracking
indicatif = "0.18"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Command-line interface
clap = { version = "4.5", features = ["derive", "env"] }

# Health monitoring
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Utilities
once_cell = "1.21"
parking_lot = "0.12"
num_cpus = "1.17"
url = "2.5"  # URL parsing for AMQP connection normalization

[dev-dependencies]
tempfile = "3.25"
mockito = "1.7"
proptest = "1.10"
criterion = "0.8"
serial_test = "3.3.1"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Project-scoped cargo tools managed via cargo-run-bin
# Install cargo-run-bin once: cargo install cargo-run-bin
# Then install all tools: cargo bin --install
# Run tools with: cargo bin <tool-name>
[package.metadata.bin]
cargo-outdated = { version = "0.17.0" }

# Lint configuration - treat all warnings as errors
# This is equivalent to running: cargo clippy -- -D warnings
# Ensures no warnings can slip through in development or CI
[lints.rust]
warnings = "deny"  # Treat all Rust compiler warnings as errors
