[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discogsography-extractor"
version = "0.1.0"
description = "Discogs data extractor service"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34.0",
    "dict-hash>=1.1.0",
    "orjson>=3.9.0",
    "pika>=1.3.0",
    "tqdm>=4.65.0",
    "xmltodict>=0.13.0",
]

[project.scripts]
extractor = "extractor:main"