[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-extractor"
version = "0.1.0"
description = "Discogs data extractor service"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
dependencies = [
    "aio-pika>=9.0.0",
    "boto3>=1.34.0",
    "dict-hash>=1.1.0",
    "neo4j>=5.0.0",
    "orjson>=3.9.0",
    "pika>=1.3.0",
    "tqdm>=4.65.0",
    "xmltodict>=0.13.0",
]

[project.scripts]
extractor = "extractor:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Tool configurations inherit from root pyproject.toml
# Only service-specific overrides are defined here

[tool.ruff.lint.per-file-ignores]
"extractor.py" = ["T201"]  # Allow print statements for ASCII art

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "dict_hash",
    "pika.*",
    "tqdm",
    "xmltodict",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["extractor", "discogs"]

[tool.pytest.ini_options]
testpaths = ["../tests/extractor"]
