[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-investigations"
version = "0.1.0"
description = "Graph database benchmark harness for Discogsography"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    # All backends
    "neo4j>=6.1.0",         # Neo4j + Memgraph (Bolt protocol)
    "psycopg[binary]>=3.0.0",  # Apache AGE (PostgreSQL extension)
    "falkordb>=1.0.0",      # FalkorDB (Redis module)
    "python-arango>=8.0.0", # ArangoDB
    "pydgraph>=25.0.0",    # Dgraph
    # Infrastructure
    "hcloud>=2.0.0",        # Hetzner Cloud API
    # Analysis and charting
    "matplotlib>=3.10.0",   # Chart generation
    "numpy>=2.0.0",         # Numerical computation
    "seaborn>=0.13.0",      # Statistical visualization
    "matplotlib-stubs>=0.3.11",
]

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]

[dependency-groups]
dev = []

# Tool configurations inherit from root pyproject.toml
