[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-mcp"
version = "0.1.0"
description = "MCP server exposing the Discogsography knowledge graph to AI assistants"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.12.0",
    "neo4j>=6.1.0",
    "psycopg[binary]>=3.0.0",
    "structlog>=24.0.0",
]

[project.scripts]
discogsography-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

# Tool configurations inherit from root pyproject.toml
