[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discogsography-tableinator"
version = "0.1.0"
description = "Discogs data PostgreSQL table service"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.0.0",
    "orjson>=3.9.0",
    "psycopg[binary]>=3.1.0",
]

[project.scripts]
tableinator = "tableinator:main"