[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogsography-tableinator"
version = "0.1.0"
description = "PostgreSQL database consumer for Discogs data"
authors = [{name = "Robert Wlodarczyk", email = "robert@simplicityguy.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
license = {text = "PolyForm-Noncommercial-1.0.0"}
dependencies = [
    "aio-pika>=10.0.1",
    "dict-hash>=1.3.7",
    "orjson>=3.11.9",
    "pika>=1.4.1",
    "psycopg[binary]>=3.3.4",
    "structlog>=26.1.0",
]

[project.scripts]
tableinator = "tableinator:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Tool configurations inherit from root pyproject.toml
# Only service-specific overrides are defined here

[tool.ruff.lint.per-file-ignores]
"tableinator.py" = ["T201"]    # Allow print statements for ASCII art

[[tool.mypy.overrides]]
module = [
    "aio_pika.*",
    "dict_hash",
    "psycopg.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["tableinator"]

[tool.pytest.ini_options]
testpaths = ["../tests/tableinator"]
