[package]
name = "rust_extractor"
version = "0.1.0"
edition = "2024"
authors = ["Robert Wlodarczyk <robert@simplicityguy.com>"]
license = "MIT"
description = "High-performance Rust-based Discogs data extractor"
repository = "https://github.com/SimplicityGuy/discogsography"

[dependencies]
# Core async runtime
tokio = { version = "1.43", features = ["full"] }

# XML parsing (following disco-quick's approach)
quick-xml = { version = "0.37", features = ["serialize"] }

# Compression handling
flate2 = "1.0"

# Message queue (AMQP)
lapin = "3.2"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for S3 downloads
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
bytes = "1.8"

# Progress tracking
indicatif = "0.17"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Command-line interface
clap = { version = "4.5", features = ["derive", "env"] }

# Health monitoring
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.15"
mockito = "1.6"
proptest = "1.6"
criterion = "0.6"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
