[package]
name = "rust_extractor"
version = "0.1.0"
edition = "2024"
authors = ["Robert Wlodarczyk <robert@simplicityguy.com>"]
license = "MIT"
description = "High-performance Rust-based Discogs data extractor"
repository = "https://github.com/SimplicityGuy/discogsography"

[dependencies]
# Core async runtime
tokio = { version = "1.49", features = ["full"] }

# XML parsing (following disco-quick's approach)
quick-xml = { version = "0.37", features = ["serialize"] }

# Compression handling
flate2 = "1.1"

# Message queue (AMQP) - latest
lapin = "3.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# AWS S3 SDK (equivalent to Python boto3) - latest
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"

# HTTP client for progress tracking during downloads
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
bytes = "1.11"

# Progress tracking
indicatif = "0.17"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Command-line interface
clap = { version = "4.5", features = ["derive", "env"] }

# Health monitoring
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Utilities
once_cell = "1.21"
parking_lot = "0.12"
num_cpus = "1.17"
url = "2.5"  # URL parsing for AMQP connection normalization

[dev-dependencies]
tempfile = "3.24"
mockito = "1.7"
proptest = "1.9"
criterion = "0.6"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
